# igl-kiosk

./: .gitignore  README.md  pyproject.toml  repomix-output.txt  requirements.txt  setup.py
src/igl_kiosk/: main.py
src/igl_kiosk/core/: browser.py  url_injector.py
src/igl_kiosk/ui/: templates.py
src/igl_kiosk/utils/: shortcuts.py
tests/: __init__.py  test_browser.py  test_url_injector.py
